--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -22,13 +22,13 @@ tasks:
     desc: Run server with Air
     cmds:
       - |
-        go tool air \\
-            --build.cmd "go build -o tmp/bin/main ./main.go" \\
-            --build.bin "tmp/bin/main" \\
-            --build.delay "100" \\
-            --build.exclude_dir "node_modules" \\
-            --build.include_ext "go" \\
-            --build.stop_on_error "false" \\
+        go tool air \
+            --build.cmd "go build -o tmp/bin/main ./main.go" \
+            --build.bin "tmp/bin/main" \
+            --build.delay "100" \
+            --build.exclude_dir "node_modules" \
+            --build.include_ext "go" \
+            --build.stop_on_error "false" \
             --misc.clean_on_exit true
 
   dev:
